--- a/Fsharp.Xunit.Theory.MemberData/Fsharp.Xunit.Theory.MemberData.fsproj
+++ b/Fsharp.Xunit.Theory.MemberData/Fsharp.Xunit.Theory.MemberData.fsproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <WarnOn>3390;$(WarnOn)</WarnOn>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
